[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtgdeckdash"
version = "0.1.0"
description = "Commander deck analyzer with GUI, CLI, and interactive dashboard exports"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MTGDeckDash" }]
dependencies = [
  "requests>=2.31",
  "pydantic>=2.5",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "plotly>=5.18",
  "diskcache>=5.6",
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pyinstaller>=6.0",
]

[project.scripts]
mtgdeckdash = "mtgdeckdash.cli:main"
mtgdeckdash-gui = "mtgdeckdash.gui:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mtgdeckdash*"]

[tool.setuptools.package-data]
"mtgdeckdash" = ["rules/*.yaml", "assets/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
